Change default form

--- a/view/user/default/profile.phtml
+++ b/view/user/default/profile.phtml
@@ -11,37 +11,8 @@
 
         <div class="tab-pane active" id="dados-usuario">
             <div class="row">
-                <div class="container" id="user-container">
-                    <form class="form-horizontal" method="POST" action="/user/change-user">
-                        <fieldset>
-                            <!-- Form Name -->
-                            <legend><?= $this->translate('Change User'); ?></legend>
-                            <!-- Text input-->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="name"><?= $this->translate('Name') ?></label>  
-                                <div class="col-md-4">
-                                    <input value="<?= $this->response['data']->getPeople()->getName(); ?>" id="name" name="name" type="text" placeholder="<?= $this->translate('Enter your name') ?>" class="form-control input-md" required>
-                                </div>
-                            </div>
-                            <!-- Text input-->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="username"><?= $this->translate('Username') ?></label>  
-                                <div class="col-md-4">
-                                    <input value="<?= $this->response['data']->getUsername(); ?>" id="name" name="username" type="text" placeholder="<?= $this->translate('Enter your username') ?>" class="form-control input-md" required>
-                                </div>
-                            </div>
-                            <!-- Button -->
-                            <div class="form-group">
-                                <label class="col-md-4 control-label" for="change-user"></label>
-                                <div class="col-md-4">                                    
-                                    <button class="pull-left btn" data-toggle="collapse" data-target="#change-password-container"><?= $this->translate('Change password?') ?></button>
-                                    <button class="pull-right btn btn-success" id="change" name="change-user"><?= $this->translate('Change') ?></button>
-                                </div>                
+                <?= $this->render_entity_form($this->response['data']); ?>
 
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
                 <div class="container collapse" id="change-password-container">
                     <form class="form-horizontal" method="POST" action="/user/change-password">
                         <fieldset>
