--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -6,14 +6,14 @@
         <div class="form-group">
             <label class="col-md-4 control-label" for="username"><?= $this->translate('Username') ?></label>  
             <div class="col-md-4">
-                <input id="username" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>
+                <input id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length" data-validation-backend="x" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>
             </div>
         </div>
         <!-- Password input-->
         <div class="form-group">
             <label class="col-md-4 control-label" for="password"><?= $this->translate('Password') ?></label>
             <div class="col-md-4">
-                <input id="password" name="password" type="password" placeholder="<?= $this->translate('Enter a password') ?>" class="form-control input-md" required>
+                <input id="password" name="password" type="password" data-validation="required" placeholder="<?= $this->translate('Enter a password') ?>" class="form-control input-md" required>
             </div>
         </div>
         <!-- Button -->
