--- a/view/user/default/create-account.phtml
+++ b/view/user/default/create-account.phtml
@@ -1,44 +1,91 @@
-<form class="form-horizontal" method="POST">
-    <fieldset>
-        <!-- Form Name -->
-        <legend><?= $this->translate('Create User'); ?></legend>
+<div class="app-container app-login">
+    <div class="flex-center">
+        <div class="app-header"></div>
+        <div class="app-body">
+            <div class="loader-container text-center">
+                <div class="icon">
+                    <div class="sk-folding-cube">
+                        <div class="sk-cube1 sk-cube"></div>
+                        <div class="sk-cube2 sk-cube"></div>
+                        <div class="sk-cube4 sk-cube"></div>
+                        <div class="sk-cube3 sk-cube"></div>
+                    </div>
+                </div>
+                <div class="title">Logging in...</div>
+            </div>
+            <div class="app-block">
+                <div class="app-right-section">                    
+                    <div class="app-brand"><?= $this->translate('Panel') ?> <span class="highlight"><?= $this->translate('Application Name') ?></span></div>                                        
+                    <div class="app-info">
 
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="name"><?= $this->translate('Name') ?></label>  
-            <div class="col-md-4">
-                <input id="name" name="name" type="text" placeholder="<?= $this->translate('Enter your name') ?>" class="form-control input-md" required>
+                        <ul class="list">
+                            <li>
+                                <div class="icon">
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="title">Increase <b>Productivity</b></div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa fa-cubes" aria-hidden="true"></i>
+                                </div>
+                                <div class="title">Lot of <b>Components</b></div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa fa-usd" aria-hidden="true"></i>
+                                </div>
+                                <div class="title">Forever <b>Free</b></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="app-form">
+                    <div class="form-suggestion">
+                        <?= $this->translate('Create Account'); ?>
+                    </div>
+                    <form method="POST">
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1">
+                                <i class="fa fa-paper-plane" aria-hidden="true"></i></span>
+                            <input id="name" name="name" type="text" placeholder="<?= $this->translate('Enter your name') ?>" class="form-control input-md" required>
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon2">
+                                <i class="fa fa-user" aria-hidden="true"></i></span>
+                            <input id="name" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="server" data-validation-url="/user/user-exists.json" name="username" type="text" placeholder="<?= $this->translate('Enter your username') ?>" class="form-control input-md" required>
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon3">
+                                <i class="fa fa-key" aria-hidden="true"></i></span>
+                            <input id="password" name="password" type="password" data-validation="strength" data-validation-strength="2" placeholder="<?= $this->translate('Enter a password') ?>" class="form-control input-md" required>
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon4">
+                                <i class="fa fa-check" aria-hidden="true"></i></span>
+                            <input id="password" name="confirm-password" type="password" data-validation="confirmation" data-validation-confirm="password"  placeholder="<?= $this->translate('Confirm your Password') ?>" class="form-control input-md" required>
+                        </div>
+                        <div class="text-center">                            
+                            <button id="signup" name="signup" class="btn btn-success btn-submit"><?= $this->translate('Register') ?></button>
+                        </div>
+                    </form>
+                    <div class="form-line">
+                        <div class="title">OR</div>
+                    </div>
+                    <div class="form-footer">
+                        <button type="button" class="btn btn-default btn-sm btn-social __facebook">
+                            <div class="info">
+                                <i class="icon fa fa-facebook-official" aria-hidden="true"></i>
+                                <span class="title">Register w/ Facebook</span>
+                            </div>
+                        </button>
+                    </div>
+                    <a class="pull-left" href="/user/login"><?= $this->translate('Login') ?></a>       
+                    <a class="pull-right" href="/user/forgot-password"><?= $this->translate('Forgot password ?') ?></a>
+                </div>
             </div>
         </div>
-        <!-- Text input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="username"><?= $this->translate('Username') ?></label>  
-            <div class="col-md-4">
-                <input id="name" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="server" data-validation-url="/user/user-exists.json" name="username" type="text" placeholder="<?= $this->translate('Enter your username') ?>" class="form-control input-md" required>
-            </div>
+        <div class="app-footer">
         </div>
-
-        <!-- Password input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="password"><?= $this->translate('Password') ?></label>
-            <div class="col-md-4">
-                <input id="password" name="password" type="password" data-validation="strength" data-validation-strength="2" placeholder="<?= $this->translate('Enter a password') ?>" class="form-control input-md" required>
-            </div>
-        </div>
-        <!-- Confirm input-->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="confirm-password"><?= $this->translate('Confirm your Password') ?></label>
-            <div class="col-md-4">
-                <input id="password" name="confirm-password" type="password" data-validation="confirmation" data-validation-confirm="password"  placeholder="<?= $this->translate('Confirm your Password') ?>" class="form-control input-md" required>
-            </div>
-        </div>
-
-        <!-- Button -->
-        <div class="form-group">
-            <label class="col-md-4 control-label" for="signup"></label>
-            <div class="col-md-4">
-                <button id="signup" name="signup" class="btn btn-success"><?= $this->translate('Sign Up') ?></button>
-            </div>
-        </div>    
-    </fieldset>
-</form>
+    </div>
+</div>
