Adjust on alert messages

--- a/view/user/default/profile.phtml
+++ b/view/user/default/profile.phtml
@@ -11,8 +11,9 @@
 
         <div class="tab-pane active" id="dados-usuario">
             <div class="row">
+                xxx
                 <?= $this->render_entity_form($this->response['data']); ?>
-
+                xxx
                 <div class="container collapse" id="change-password-container">
                     <form class="form-horizontal" method="POST" action="/user/change-password">
                         <fieldset>
