--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -1,23 +1,14 @@
 <div class="app-container app-login">
     <div class="flex-center">
         <div class="app-header"></div>
-        <div class="app-body">
-            <div class="loader-container text-center">
-                <div class="icon">
-                    <div class="sk-folding-cube">
-                        <div class="sk-cube1 sk-cube"></div>
-                        <div class="sk-cube2 sk-cube"></div>
-                        <div class="sk-cube4 sk-cube"></div>
-                        <div class="sk-cube3 sk-cube"></div>
-                    </div>
-                </div>
-                <div class="title">Logging in...</div>
-            </div>
+        <div class="app-body">            
             <div class="app-block">
                 <div class="app-form">
-                    <div class="form-header">
-                        <div class="app-brand"><?= $this->translate('Panel') ?> <span class="highlight"><?= $this->translate('Application Name') ?></span></div>
-                    </div>
+                    <div class="form-header">                        
+                        <img class="profile-img" src="/user/profile-img/id/0/profile.png">
+                        <div class="app-brand"><?= $this->translate('Panel') ?> <span class="highlight"><?= $this->translate('Application Name') ?></span></div>                                                
+                    </div> 
+
                     <form class="form-horizontal" action="/user/login" method="POST">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
