--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -5,15 +5,21 @@
             <div class="app-block">
                 <div class="app-form">
                     <div class="form-header">                        
-                        <img class="profile-img" src="/user/profile-img/id/0/profile.png">
-                        <div class="app-brand"><?= $this->translate('Panel') ?> <span class="highlight"><?= $this->translate('Application Name') ?></span></div>                                                
+                        <div class="profile-image-container">
+                            <img class="profile-image" data-default-image-profile="/user/profile-image/id/0/profile.png" src="/user/profile-image/id/0/profile.png">
+                        </div>
+                        <div class="app-brand"><?= $this->translate('Panel') ?> <span class="highlight"><?= $this->translate('Application Name') ?></span></div>                        
                     </div> 
-
+                    <div class="row username-container">
+                        <h4>&nbsp;
+                            <span data-user-not-found="<?= $this->translate('User not found') ?>" class="user-name" style="display: none"></span>
+                            &nbsp;</h4>
+                    </div>
                     <form class="form-horizontal" action="/user/login" method="POST">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
                                 <i class="fa fa-user" aria-hidden="true"></i></span>              
-                            <input id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length" data-validation-backend="x" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>                            
+                            <input data-get-image-profile="/user/get-image-profile/username/" id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length" data-validation-backend="x" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>                            
                         </div>
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon2">
