--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -15,11 +15,11 @@
                             <span data-user-not-found="<?= $this->translate('User not found') ?>" class="user-name" style="display: none"></span>
                             &nbsp;</h4>
                     </div>
-                    <form class="form-horizontal" action="/user/login" method="POST">
+                    <form id="login-form" class="form-horizontal" action="/user/login" method="POST">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
                                 <i class="fa fa-user" aria-hidden="true"></i></span>              
-                            <input data-get-image-profile="/user/get-image-profile/username/" id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length" data-validation-backend="x" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>                            
+                            <input data-valide-ajax="true" data-get-image-profile="/user/get-image-profile/username/" id="username" data-mask-regex="({regex: '[a-za-zA-Z0-9]{3,15}'})" data-validation="length" data-validation-backend="x" data-validation-length="3-15" name="username" type="text" placeholder="<?= $this->translate('Enter your Username') ?>" class="form-control input-md" required>                            
                         </div>
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon2">
